<resources>
    <string name="app_name">Desoxyribonucleique</string>
    <string name="g">G</string>
    <string name="c">C</string>
    <string name="t">T</string>
    <string name="a">A</string>
    <string name="couleur_de_fond">Couleur de Fond</string>
    <string name="background_color">background_color</string>
    <string name="default_value_vert">FF0F4A1F</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="parametres">Parametres</string>
    <string name="apparence">Apparence</string>
</resources>